test compiler arg: --add-modules=java.xml